--- a/QuickNetChat.View.SplashScreen/MainWindow.xaml
+++ b/QuickNetChat.View.SplashScreen/MainWindow.xaml
@@ -1,12 +1,32 @@
-﻿<Window x:Class="QuickNetChat.View.SplashScreen.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QuickNetChat.View.SplashScreen"
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="QuickNetChat.View.SplashScreen.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="297" Width="528">
+        Title="SplashScreen" Height="300" Width="500" WindowStartupLocation="CenterScreen" MinWidth="500" MinHeight="300" BorderThickness="0" WindowStyle="None">
+    <Window.Resources>
+        <System:String x:Key="LabelSplashScreenProgrammName">Label</System:String>
+    </Window.Resources>
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+            <GradientStop Color="#FF212121" Offset="0.996"/>
+            <GradientStop Color="#FFB9734A"/>
+            <GradientStop Color="#FF363636"/>
+            <GradientStop Color="#FF232323" Offset="0.009"/>
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="155*"/>
+            <ColumnDefinition Width="86*"/>
+            <ColumnDefinition Width="0*"/>
+        </Grid.ColumnDefinitions>
+        <ProgressBar HorizontalAlignment="Left" Height="20" Margin="0,220,0,0" VerticalAlignment="Top" Width="482" Background="{x:Null}" IsIndeterminate="True" Foreground="#FFDA4F00" BorderThickness="0" Grid.ColumnSpan="2"/>
+        <Label x:Name="LabelProgrammName" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" Content="ProgrammName" Foreground="White"/>
+        <Label x:Name="LabelProgressMessage" HorizontalAlignment="Left" Margin="10,240,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="White" Content="ProgressMessage"/>
 
     </Grid>
 </Window>
