--- a/QuickNetChat.View.Main/App.xaml
+++ b/QuickNetChat.View.Main/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="QuickNetChat.View.Browse.App"
+﻿<Application x:Class="QuickNetChat.View.Main.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:QuickNetChat.View.Browse"
+             xmlns:local="clr-namespace:QuickNetChat.View.Main"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
