--- a/QuickNetChat.View.Main/MainWindow.xaml
+++ b/QuickNetChat.View.Main/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="QuickNetChat.View.Browse.MainWindow"
+﻿<Window x:Class="QuickNetChat.View.Main.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:QuickNetChat.View.Browse"
+        xmlns:local="clr-namespace:QuickNetChat.View.Main"
         mc:Ignorable="d"
-        Title="MainWindow" Height="673.132" Width="292.105">
+        Title="MainWindow" Height="450" Width="800">
     <Grid>
         
     </Grid>
